--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,20 +13,18 @@ Authors@R: c(
         role = c("aut", "cre"),
         email = "mavrogiannis.ioa@gmail.com")
         )
-Description: Performs non-parametric estimation and simulation from 
-    parametric and non-parametric model specifications, that concern
-    (multi-state) discrete-time Drifting Semi-Markov processes.
-    Three different models are possible, regarding the number of transition
-    matrices and sojourn time distributions used for the computation of
-    the Semi-Markov kernels, which describe the Drifting Semi-Markov kernel.
-    For the parametric specification several discrete distributions are 
-    considered for the sojourn times: Uniform, Geometric, Poisson,
-    Discrete Weibull and Negative Binomial.
-    For the non-parametric counterpart, no assumptions are done on the shape
-    of the sojourn time distributions.
+Description: Performs non-parametric estimation and simulation from parametric and non-
+    parametric model specifications, that concern Drifting Semi-Markov processes. Three
+    models are considered, regarding the number of transition matrices and sojourn time
+    distributions used for the computation of the Semi-Markov kernels which characterize
+    the Drifting Semi-Markov kernel. For the parametric model specification several 
+    discrete distributions are considered for the sojourn times: 
+    Uniform, Geometric, Poisson, Discrete Weibull and Negative Binomial.
+    For the non-parametric model specification, no assumptions are done on the shape of
+    the sojourn time distributions. 
     Semi-Markov models are described in:
     Barbu, V.S., Limnios, N. (2008) <doi:10.1007/978-0-387-73173-5>.
-    Drifting Semi-Markov models are described in:
+    Drifting Markov models are described in:
     Vergne, N. (2008) <doi:10.2202/1544-6115.1326>.
 License: GPL
 Imports: DiscreteWeibull
