--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: dsmmR
-Title: Estimation and simulation of Drifting Semi-Markov Models
-Version: 0.0.92
+Title: Estimation and Simulation of Drifting Semi-Markov Models
+Version: 0.0.93
 Date: 2022-10-04
 Authors@R: c(
     person("Vlad Stefan", "Barbu",
@@ -13,15 +13,14 @@ Authors@R: c(
         role = c("aut", "cre"),
         email = "mavrogiannis.ioa@gmail.com")
         )
-Description: Performs non-parametric estimation and simulation from parametric and non-
-    parametric model specifications, that concern Drifting Semi-Markov processes. Three
-    models are considered, regarding the number of transition matrices and sojourn time
-    distributions used for the computation of the Semi-Markov kernels which characterize
-    the Drifting Semi-Markov kernel. For the parametric model specification several 
-    discrete distributions are considered for the sojourn times: 
-    Uniform, Geometric, Poisson, Discrete Weibull and Negative Binomial.
-    For the non-parametric model specification, no assumptions are done on the shape of
-    the sojourn time distributions. 
+Description: Performs non-parametric estimation and simulation from parametric and 
+    non-parametric model specifications, that concern Drifting Semi Markov processes. 
+    Three models are considered, regarding the number of transition matrices and sojourn
+    time distributions used for the computation of the Semi Markov kernels which characterize
+    the Drifting Semi-Markov kernel. For the parametric model specification, several discrete
+    distributions are considered for the sojourn times: Uniform, Poisson, Geometric, 
+    Discrete Weibull and Negative Binomial. For the non parametric model specification, 
+    assumptions are done on the shape of the sojourn time distributions.
     Semi-Markov models are described in:
     Barbu, V.S., Limnios, N. (2008) <doi:10.1007/978-0-387-73173-5>.
     Drifting Markov models are described in:
