--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,11 @@ Authors@R: c(
            role = c("aut"))
            ) 
 Description: Performs parametric and non-parametric estimation and simulation of 
-    Drifting semi-Markov processes. The definition of parametric and non-parametric
+    drifting semi-Markov processes. The definition of parametric and non-parametric
     model specifications is also possible. Furthermore, three different types of
-    Drifting semi-Markov models are considered. These models differ in the number
+    drifting semi-Markov models are considered. These models differ in the number
     of transition matrices and sojourn time distributions used for the computation
-    of a number of semi-Markov kernels, which in turn characterize the Drifting 
+    of a number of semi-Markov kernels, which in turn characterize the drifting 
     semi-Markov kernel. For the parametric model estimation and specification, 
     several discrete distributions are considered for the sojourn times: Uniform,
     Poisson, Geometric, Discrete Weibull and Negative Binomial. The non-parametric
