--- a/.github/workflows/draft-pdf.yml
+++ b/.github/workflows/draft-pdf.yml
@@ -1,7 +1,12 @@
 on: [push]
 
+name: JOSS-paper
+
+
 jobs:
   paper:
+    runs:
+      using: 'node16'
     runs-on: ubuntu-latest
     name: Paper Draft
     steps:
